--- a/labb2/Base.lproj/Main.storyboard
+++ b/labb2/Base.lproj/Main.storyboard
@@ -22,31 +22,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="RED" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S5c-2h-don">
-                                <rect key="frame" x="186" y="20" width="33" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="oN8-xk-OfK"/>
-                                    <constraint firstAttribute="width" constant="33" id="vkJ-vk-byM"/>
-                                </constraints>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RED" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S5c-2h-don">
+                                <rect key="frame" x="144" y="20" width="33" height="21"/>
                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
                                 <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="BLUE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mvf-KZ-xbD">
-                                <rect key="frame" x="186" y="707" width="42" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="Kun-ik-3kC"/>
-                                </constraints>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BLUE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mvf-KZ-xbD">
+                                <rect key="frame" x="139" y="527" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view opaque="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="k6a-rK-QSO" customClass="SKView">
-                                <rect key="frame" x="20" y="49" width="374" height="650"/>
+                            <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k6a-rK-QSO" customClass="SKView">
+                                <rect key="frame" x="0.0" y="49" width="320" height="470"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ipE-Cn-TrU">
-                                <rect key="frame" x="344" y="702" width="50" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ipE-Cn-TrU">
+                                <rect key="frame" x="254" y="522" width="50" height="30"/>
                                 <state key="normal" title="Restart"/>
                                 <connections>
                                     <action selector="restart:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yuX-9m-eM1"/>
@@ -55,16 +48,16 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="ipE-Cn-TrU" firstAttribute="top" secondItem="Mvf-KZ-xbD" secondAttribute="top" constant="-5" id="28S-4R-aiv"/>
-                            <constraint firstItem="Mvf-KZ-xbD" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8qY-Oj-S8Q"/>
-                            <constraint firstItem="k6a-rK-QSO" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Gal-hn-VwP"/>
-                            <constraint firstItem="Mvf-KZ-xbD" firstAttribute="leading" secondItem="S5c-2h-don" secondAttribute="leading" id="Jr7-7M-Vc1"/>
-                            <constraint firstAttribute="bottom" secondItem="k6a-rK-QSO" secondAttribute="bottom" constant="37" id="M7x-BW-pPK"/>
-                            <constraint firstItem="Mvf-KZ-xbD" firstAttribute="bottom" secondItem="k6a-rK-QSO" secondAttribute="bottom" constant="29" id="OBM-Gt-IsK"/>
-                            <constraint firstItem="k6a-rK-QSO" firstAttribute="top" secondItem="S5c-2h-don" secondAttribute="bottom" constant="8" id="TqJ-5q-Ccv"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="k6a-rK-QSO" secondAttribute="trailing" id="cNB-z5-w4L"/>
-                            <constraint firstItem="S5c-2h-don" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="gWw-6o-qZH"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="ipE-Cn-TrU" secondAttribute="trailing" id="n3b-Vs-raO"/>
+                            <constraint firstItem="S5c-2h-don" firstAttribute="centerX" secondItem="k6a-rK-QSO" secondAttribute="centerX" id="1ve-0R-sdn"/>
+                            <constraint firstItem="Mvf-KZ-xbD" firstAttribute="centerY" secondItem="ipE-Cn-TrU" secondAttribute="centerY" id="9zG-m2-CVy"/>
+                            <constraint firstItem="S5c-2h-don" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="AHk-0l-fDZ"/>
+                            <constraint firstItem="Mvf-KZ-xbD" firstAttribute="top" secondItem="k6a-rK-QSO" secondAttribute="bottom" constant="8" symbolic="YES" id="AcS-8h-53j"/>
+                            <constraint firstItem="k6a-rK-QSO" firstAttribute="centerX" secondItem="Mvf-KZ-xbD" secondAttribute="centerX" id="Akf-Ic-3DF"/>
+                            <constraint firstItem="ipE-Cn-TrU" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="BnQ-Ve-Yau"/>
+                            <constraint firstItem="k6a-rK-QSO" firstAttribute="top" secondItem="S5c-2h-don" secondAttribute="bottom" constant="8" symbolic="YES" id="L5s-Me-4Cn"/>
+                            <constraint firstItem="k6a-rK-QSO" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="QUX-sy-9iM"/>
+                            <constraint firstAttribute="bottom" secondItem="Mvf-KZ-xbD" secondAttribute="bottom" constant="20" symbolic="YES" id="SOG-Ng-Hpt"/>
+                            <constraint firstAttribute="trailing" secondItem="k6a-rK-QSO" secondAttribute="trailing" id="XKj-mi-s4x"/>
                         </constraints>
                     </view>
                     <connections>
@@ -75,7 +68,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="62" y="416"/>
+            <point key="canvasLocation" x="60" y="414.08450704225351"/>
         </scene>
     </scenes>
 </document>
