--- a/labb2/Base.lproj/Main.storyboard
+++ b/labb2/Base.lproj/Main.storyboard
@@ -1,15 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="7s1-vy-1k5">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="VkO-5S-iFn">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="4I4-8o-XAu">
+            <objects>
+                <navigationController id="MZx-gG-bHB" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="rl9-d2-mIt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="7s1-vy-1k5" kind="relationship" relationship="rootViewController" id="jP6-DD-aSx"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="egc-XZ-BSj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1124" y="-388"/>
+        </scene>
+        <!--Split View Controller-->
+        <scene sceneID="dg7-n5-hiE">
+            <objects>
+                <splitViewController id="VkO-5S-iFn" sceneMemberID="viewController">
+                    <connections>
+                        <segue destination="MZx-gG-bHB" kind="relationship" relationship="masterViewController" id="ZaW-iQ-fWi"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="detailViewController" id="URw-Vz-wEB"/>
+                    </connections>
+                </splitViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="L5m-11-kKj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2097" y="-167"/>
+        </scene>
         <!--Home View Controller-->
         <scene sceneID="uqn-ej-aMV">
             <objects>
@@ -58,14 +86,22 @@
                             <constraint firstItem="HqT-l5-mgu" firstAttribute="centerY" secondItem="OX7-Jn-Yzo" secondAttribute="centerY" id="eqg-0W-CQR"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="vb2-K8-elx">
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="trash" id="GzH-Cp-kIi">
+                            <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <action selector="deletegame:" destination="7s1-vy-1k5" id="Kit-Um-sN6"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="gamePickerView" destination="bNy-up-5Lg" id="xMN-eg-cCQ"/>
-                        <segue destination="BYZ-38-t0r" kind="show" identifier="toGame" id="SPj-nz-nNw"/>
+                        <segue destination="BYZ-38-t0r" kind="showDetail" identifier="toGame" id="RSD-yH-KCX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Opc-M7-5eK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-668" y="414"/>
+            <point key="canvasLocation" x="-106" y="-388"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -79,73 +115,47 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RED" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S5c-2h-don">
-                                <rect key="frame" x="171" y="20" width="33" height="21"/>
-                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
-                                <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k6a-rK-QSO" customClass="SKView">
+                                <rect key="frame" x="0.0" y="57" width="375" height="561"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BLUE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mvf-KZ-xbD">
-                                <rect key="frame" x="167" y="626" width="42" height="21"/>
+                                <rect key="frame" x="166" y="626" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k6a-rK-QSO" customClass="SKView">
-                                <rect key="frame" x="0.0" y="49" width="375" height="569"/>
-                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
-                            </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ipE-Cn-TrU">
-                                <rect key="frame" x="326" y="620" width="33" height="33"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="33" id="1JA-Rv-XSz"/>
-                                    <constraint firstAttribute="height" constant="33" id="SOB-fn-Tg5"/>
-                                </constraints>
-                                <state key="normal" image="restart"/>
-                                <connections>
-                                    <action selector="restart:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yuX-9m-eM1"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QdR-Tj-CLU">
-                                <rect key="frame" x="278" y="620" width="33" height="33"/>
-                                <state key="normal" image="home"/>
-                                <connections>
-                                    <action selector="goToHome:" destination="BYZ-38-t0r" eventType="touchUpInside" id="icl-uX-gGK"/>
-                                </connections>
-                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RED" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S5c-2h-don">
+                                <rect key="frame" x="171" y="28" width="33" height="21"/>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
+                                <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="S5c-2h-don" firstAttribute="centerX" secondItem="k6a-rK-QSO" secondAttribute="centerX" id="1ve-0R-sdn"/>
-                            <constraint firstItem="S5c-2h-don" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="AHk-0l-fDZ"/>
-                            <constraint firstItem="Mvf-KZ-xbD" firstAttribute="top" secondItem="k6a-rK-QSO" secondAttribute="bottom" constant="8" symbolic="YES" id="AcS-8h-53j"/>
-                            <constraint firstItem="k6a-rK-QSO" firstAttribute="centerX" secondItem="Mvf-KZ-xbD" secondAttribute="centerX" id="Akf-Ic-3DF"/>
-                            <constraint firstItem="k6a-rK-QSO" firstAttribute="top" secondItem="S5c-2h-don" secondAttribute="bottom" constant="8" symbolic="YES" id="L5s-Me-4Cn"/>
-                            <constraint firstItem="QdR-Tj-CLU" firstAttribute="leading" secondItem="Mvf-KZ-xbD" secondAttribute="trailing" constant="69" id="PFI-aN-MEw"/>
-                            <constraint firstItem="k6a-rK-QSO" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="QUX-sy-9iM"/>
-                            <constraint firstAttribute="bottom" secondItem="Mvf-KZ-xbD" secondAttribute="bottom" constant="20" symbolic="YES" id="SOG-Ng-Hpt"/>
-                            <constraint firstAttribute="trailing" secondItem="k6a-rK-QSO" secondAttribute="trailing" id="XKj-mi-s4x"/>
-                            <constraint firstItem="ipE-Cn-TrU" firstAttribute="centerY" secondItem="Mvf-KZ-xbD" secondAttribute="centerY" id="aUJ-q5-4Vz"/>
-                            <constraint firstItem="QdR-Tj-CLU" firstAttribute="bottom" secondItem="ipE-Cn-TrU" secondAttribute="bottom" id="eet-kL-CDm"/>
-                            <constraint firstItem="QdR-Tj-CLU" firstAttribute="top" secondItem="ipE-Cn-TrU" secondAttribute="top" id="iF1-ig-8wy"/>
-                            <constraint firstItem="ipE-Cn-TrU" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="ifq-dA-Kpb"/>
-                            <constraint firstItem="ipE-Cn-TrU" firstAttribute="leading" secondItem="QdR-Tj-CLU" secondAttribute="trailing" constant="15" id="l34-4E-ZKS"/>
+                            <constraint firstItem="k6a-rK-QSO" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="CXc-jF-6hx"/>
+                            <constraint firstItem="S5c-2h-don" firstAttribute="centerX" secondItem="k6a-rK-QSO" secondAttribute="centerX" id="Fep-HY-sjf"/>
+                            <constraint firstItem="k6a-rK-QSO" firstAttribute="centerX" secondItem="Mvf-KZ-xbD" secondAttribute="centerX" id="MzU-eF-BXB"/>
+                            <constraint firstAttribute="bottom" secondItem="Mvf-KZ-xbD" secondAttribute="bottom" constant="20" symbolic="YES" id="PiN-ac-gp8"/>
+                            <constraint firstItem="S5c-2h-don" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" symbolic="YES" id="fbo-tK-9yD"/>
+                            <constraint firstAttribute="trailing" secondItem="k6a-rK-QSO" secondAttribute="trailing" id="j6g-ZW-KoR"/>
+                            <constraint firstItem="Mvf-KZ-xbD" firstAttribute="top" secondItem="k6a-rK-QSO" secondAttribute="bottom" constant="8" symbolic="YES" id="kn3-p1-lwQ"/>
+                            <constraint firstItem="k6a-rK-QSO" firstAttribute="top" secondItem="S5c-2h-don" secondAttribute="bottom" constant="8" symbolic="YES" id="lMA-Td-9Hl"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="blueLabel" destination="Mvf-KZ-xbD" id="ROp-dn-jIQ"/>
                         <outlet property="gameView" destination="k6a-rK-QSO" id="gsB-O5-sqD"/>
                         <outlet property="redLabel" destination="S5c-2h-don" id="9df-dR-kgJ"/>
-                        <segue destination="7s1-vy-1k5" kind="show" identifier="toHome" id="ZT8-Jr-sY0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="101.59999999999999" y="-348.57571214392806"/>
+            <point key="canvasLocation" x="-298.39999999999998" y="362.96851574212894"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="home" width="128" height="128"/>
-        <image name="restart" width="128" height="128"/>
-    </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="RSD-yH-KCX"/>
+    </inferredMetricsTieBreakers>
 </document>
